реализация 2 части ДЗ